# stitcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  stitcher_gui.py  tilefusion.py
.github/workflows/: ci.yml
gui/: __init__.py  app.py
scripts/: convert_to_zarr.py
src/tilefusion/: __init__.py  core.py  flatfield.py  optimization.py  utils.py
src/tilefusion/io/: __init__.py  individual_tiffs.py  ome_tiff.py  ome_tiff_tiles.py  zarr.py
tests/: __init__.py  conftest.py  test_block_reduce.py  test_cpu_fallback.py  test_fft.py  test_fusion.py  test_histogram_match.py  test_io.py  test_optimization.py  test_registration.py  test_shift_array.py  test_ssim.py  test_utils.py
